--- a/src/components/app-root/app-root.css
+++ b/src/components/app-root/app-root.css
@@ -13,3 +13,11 @@ h1 {
   color: #fff;
   padding: 0 12px;
 }
+
+footer {
+  position: fixed;
+  bottom: 0;
+  height: 50px;
+  background-color: var(--main-color);
+  width: 100%;
+}
