--- a/src/global/app.css
+++ b/src/global/app.css
@@ -14,3 +14,8 @@ body {
   padding: 0px;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 }
+
+:root{
+  --main-color: #5851ff;
+  --bg-color: #F1F8FE;
+}
