--- a/src/components/app-table/app-table.css
+++ b/src/components/app-table/app-table.css
@@ -4,7 +4,7 @@ tr {
 }
 
 tr:hover {
-  background-color: var(--bg-color)
+  background-color: var(--bg-color);
 }
 
 table {
@@ -16,7 +16,7 @@ table {
 th {
   text-transform: uppercase;
   background-color: var(--bg-color);
-  color: var(--main-color)
+  color: var(--main-color);
 }
 
 th,
