--- a/src/components/app-dashboard/app-dashboard.css
+++ b/src/components/app-dashboard/app-dashboard.css
@@ -9,11 +9,11 @@
 
 .dashboard__left {
   padding: 40px;
-  width: calc(100% - 440px);
+  width: calc(100% - 480px);
 }
 
 .dashboard__right {
-  padding-top:50px;
+  padding-top: 50px;
   width: 400px;
   height: auto;
   display: flex;
@@ -23,6 +23,7 @@
   background-color: var(--bg-color);
   position: relative;
 }
+
 .dashboard__right .dashboard__right--sticky {
   position: -webkit-sticky;
   position: sticky;
@@ -32,8 +33,8 @@
   flex-direction: column;
 }
 
-.dashboard__right--sticky  > * {
-  margin: auto
+.dashboard__right--sticky > * {
+  margin: auto;
 }
 
 .dashboard__right .dashboard__right--sticky button.primary {
@@ -54,16 +55,16 @@ button {
   text-transform: uppercase;
   padding: 16px 20px;
   border-radius: 2px;
-  box-shadow: 0 8px 16px rgba(0,0,0,.1), 0 3px 6px rgba(0,0,0,.08);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
   outline: 0;
-  letter-spacing: .04em;
-  transition: all .15s ease;
+  letter-spacing: 0.04em;
+  transition: all 0.15s ease;
   cursor: pointer;
   margin-bottom: 50px;
 }
 
 button:hover {
-  box-shadow: 0 3px 6px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.1);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.1);
   transform: translateY(1px);
 }
 
@@ -76,7 +77,7 @@ button.primary {
   margin: auto;
 }
 
-@media screen and (max-width: 750px){
+@media screen and (max-width: 750px) {
   .dashboard {
     flex-direction: column;
   }
@@ -87,7 +88,6 @@ button.primary {
 
   .dashboard__right {
     margin: auto;
-    width: 100%
+    width: 100%;
   }
 }
-
